--- a/login.css
+++ b/login.css
@@ -1,26 +1,54 @@
-body{
-    background-color: #773344;
+Body {  
+    font-family: Calibri, Helvetica, sans-serif;  
+    background-image:url("img/MySchool2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+   
+  }  
+
+  Body::before {
+    Position : absolute;
+    Left:0;
+    Top:0;
+   background-color:rgba(7, 6, 14, 0.3) ;
     height: 100vh;
-    font-family: 'montserrat',sans-serif;
-}
+    width: 100vw;
+    z-index:0;
+    content: "";
+    
+    }
+  .all{
+      width: 50% ;
+      height:auto;
+      position: absolute;
+      top: 25%;
+      left: 25%;
+      text-align: center;
+  }
+  button {   
+         background-color: #727472;   
+         width: 100%;  
+          color: #773344;   
+          padding: 15px;   
+          margin: 10px 0px;   
+          border: none;   
+          cursor: pointer;   
+           }   
+   form {   
+          border: 3px solid #f1f1f1;   
+      }   
+   input[type=email], input[type=password] {   
+          width: 100%;   
+          margin: 8px ;  
+          padding: 12px 20px;   
+          display: inline-block;   
+          border: 2px solid #727472;
+          box-sizing: border-box;   
+     
+    }  
 
-.container{
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 50%;
-}
-form{
-background:rgba(255,255,255,0.3);
-padding: 3em;
-height: 320px ;
-border-radius: 20px;
-border-left: 1px solid rgba(255,255,255,0.3);
-border-top: 1px solid rgba(255,255,255,0.3);
-backdrop-filter: blur(10px);
-box-shadow: 20px 20px 40px -6px rgba(0,0,0,0.2);
-text-align: center;
-position: relative;
-transition:all 0.2s ease-in-out;
-
-}
+   .container {   
+          padding: 25px;   
+          background-color: #20a39e;  
+      }   
