--- a/style.css
+++ b/style.css
@@ -1,28 +1,37 @@
-:root {
-  scroll-behavior: smooth;
-}
-#home{
-  
-  color:#20a39e;
+body{
+  height: 100%;
+  padding:0px;
+   margin: 0;
+background-color:  #e8f1f2;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-body {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #747274;
- 
-  }
+
+#home{
+ position: fixed;
+ top: 0;
+ left: 0;
+ right: 0;
+ z-index: 10;
+ box-sizing: border-box;
+ color:#20a39e;
+ height: 10%;
+ background-color:#faf0ca; 
+ padding: 20px;
+ margin: 0;
+ text-align: center;
+
+} 
   
-  header {
-    background-color: #faf0ca;
-    
-    color:rgb(255, 255, 255);
-    padding: 20px;
-    text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-  
-  
-  nav {border-top: 10px solid;
+nav {
+  position: fixed;
+  top: 10%;
+  left: 0;
+  right: 0;
+  z-index: 9;
+    height: 10%;
+    box-sizing: border-box;
+    border-top: 10px solid;
     border-color:#20a39e;
     background-color:#faf0ca;
     display: flex;
@@ -45,107 +54,50 @@ body {
   nav a:hover{ 
     background-color:lavender
   }
- 
+  .sebit{
+    position: relative;
 
- 
- 
- #headline{
-    text-align: center;
-    background-color: #773344;
-    padding: 30px;
-    color:#20a39e;
-    margin-top: auto;
- }
-
- .flex {
-  display: flex;
- 
-  justify-content:space-around;
-} 
-
- #left{
-    width:60%;
-    
- }
- #right{
-    width:38%;   
- }
- 
-.box {
- width: 100%;
- height: auto;
- aspect-ratio: 1;
-  display: flex;
-  align-items: flex-start;
-  background: #fff;
-  overflow: hidden;
-  position: relative;
-  margin-top: 20px;
-  border-radius: 20px;
-}
-.box .single-box img {
-  width: 100%; 
-  height: 100%;
-  position: absolute;
-  min-width: 100%;
-  min-height: 100%;
-  height: auto;
-  background: #000;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  opacity: 0;
-  transform: scale(1.5) rotate(15deg);
-  -webkit-animation: animate 32s infinite;
-  animation: animate 32s infinite;
-
-}
-.box .single-box:nth-child(4) img {
-  -webkit-animation-delay: 1s;
-  animation-delay: 1s;
-}
-
-.box .single-box:nth-child(3) img {
-  -webkit-animation-delay: 9s;
-  animation-delay: 9s;
-}
-.box .single-box:nth-child(2) img {
-  -webkit-animation-delay: 17s;
-  animation-delay: 17s;
-}
-.box .single-box:nth-child(1) img {
-  -webkit-animation-delay: 25s;
-  animation-delay: 25s;
-}
-@keyframes animate {
-  25% {
-    opacity: 1;
-    transform: scale(1) rotate(0);
+    left: 50%;
+     transform:translateX(-50%);
+     width:90%;
+     height: auto;
+    border: 10px solid #ddd;
+    overflow: hidden;
+    border-radius: 5px;
+    box-shadow: 5px 15px 25px black;
   }
-  40% {
-    opacity: 0;
+  .met7arik{
+    width: 100%;
+    display: flex;
+    animation: t7arak 10s infinite  ease-in;
   }
-}
+  img{width: 100%;}
+
+  @keyframes t7arak{
+    0%{transform: translateX(0);}
+    25%{transform: translateX(0);}
+    30%{transform: translateX(-100%);}
+    50%{transform: translateX(-100%);}
+    55%{transform: translateX(-200%);}
+    75%{transform: translateX(-200%);}
+    80%{transform: translateX(-300%);}
+    100%{transform: translateX(-300%);}
+  }
  
 footer {
   width:100%;
+  height: 10%;
   background-color: rgb(2, 2, 2);
   color:rgb(219, 206, 206);
-  margin:20px 0 0 0 ;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px;
-}
-
-
-.contact-us p, .social-media li {
+  margin:0px;
+  border-top: 10px ;
+  border-color: rgb(219, 206, 206);
+  box-sizing: border-box;
   
-  padding: 10px 0;
 }
 
-.social-media ul {
+.social-media ul
+ {
   list-style: none;
  
 }
@@ -186,11 +138,13 @@ footer {
 .copyright {
   background-color: rgb(219, 206, 206);
   text-align: center;
+  margin: 0;
 }
 
 .copyright p {
-  padding: 20px;
+  padding: 10px;
   color: rgb(252, 248, 248);
+  margin: 0px;
 }
 
  
