--- a/about us.css
+++ b/about us.css
@@ -57,11 +57,18 @@ body {
        background-color:lavender
      }
   .container {
-    max-width: 800px;
-    margin: 10% auto;
-    padding: 20px;
+    position: absolute;
+    top: 20%;
+    margin: 20px;
    
   }
+.video{
+  float: right;
+  margin-left:10px;
+  width:40%;
+}
+
+
   h1 {
     text-align: center;
     margin-bottom: 20px;
