--- a/contact us.css
+++ b/contact us.css
@@ -1,42 +1,124 @@
 body{
-    background-image: url("img/MySchool5.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-     font-family: Arial, Helvetica, sans-serif;
+  background-image: url("img/MySchool5.jpg") ;
+  background-position: center;
+  background-size: cover;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 8px;
+  padding: 0;
 }
-
-
-* {
+h2{
+  color: #faf0ca;
+  text-align: center;
+}
+#home{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
   box-sizing: border-box;
-}
-input[type=text],
-select,
-textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #eeeeee;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 8px;
-  margin-bottom: 16px;
-  resize: vertical;
-  background-color: #757575;
-  opacity:0.4;
-}
-input[type=submit] {
-  background-color: #4cd9c6;
-  color: #ffffff;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 7px;
-  cursor: pointer;
-}
-input[type=submit]:hover {
-  background-color: #6fe8d7;
+  color:#20a39e;
+  height: 10%;
+  background-color:#faf0ca; 
+  padding: 20px;
+  margin: 0;
+  text-align: center;
+ 
+ } 
+   
+ nav {
+   position: fixed;
+   margin: 0;
+   top: 10%;
+   left: 0;
+   right: 0;
+   z-index: 9;
+     height: 10%;
+     box-sizing: border-box;
+     border-top: 10px solid;
+     border-color:#20a39e;
+     background-color:#faf0ca;
+     display: flex;
+     justify-content: space-around;
+   }
+   
+  
+   nav li {
+     display: inline-block;
+      list-style: none;
+      margin: 0;
+   }
+   
+   nav a {
+     color: #20a39e;
+     display: block;
+     padding: 10px;
+     text-decoration: none;
+   }
+   
+   nav a:hover{ 
+     background-color:lavender
+   }
+label {
+font-family: 'Open Sans' sans-serif;
+color: #faf0ca;
+margin: 0;
 }
 .container {
-  border-radius: 8px;
- width:auto;
-  padding: 15px;
+display: block;
+border-radius: 10px;
+margin: 10% auto;
+padding: 0 0 10px 10px;
+max-width: 330px;
+background-color: rgba(32, 163, 158,0.5);
+}
+
+form {
+padding: 10px 10px 0 0;
+}
+
+input,
+textarea,select {
+width: 100%;
+border: 5px solid #faf0ca;
+background-color: #faf0ca;
+opacity: 0.5;
+border-radius: 3px;
+resize: none;
+padding: 0 5px;
+box-sizing: border-box;
+font-family: 'Open Sans' sans-serif;
+font-size: 16px;
+color: #000000;
+}
+input[type="text"],
+input[type="email"] ,select{
+opacity: 0.5;
+padding: 0 1px;
+height: 40px;
+width: 100%;
+}
+input:focus,
+textarea:focus {
+outline: none;
+}
+.form-input {
+margin: 5px 0 10px 0;
+}
+.form-textarea {
+margin: 5px 0;
+width: 100%;
+height: 100px;
+}
+input[type="submit"] {
+width: 100%;
+height: 50px;
+background-color:#faf0ca;
+border: 0;
+color:#20a39e;
+
+border-radius: 8px;
+margin: 10px 0 0 0;
+font-family: 'Open Sans' sans-serif;
+font-size: 22px;
 }
