--- a/sign up.css
+++ b/sign up.css
@@ -43,7 +43,7 @@ h1 {
 }
 
 input[type="text"],
-input[type="password"] {
+input[type="password"],input[type="email"] {
   display: block;
   box-sizing: border-box;
   margin-bottom: 20px;
