--- a/style.css
+++ b/style.css
@@ -1,59 +1,58 @@
 body{
   height: 100%;
-  padding:0px;
-   margin: 0;
-background-color:  #e8f1f2;
-font-family: Georgia, 'Times New Roman', Times, serif;
+  padding:0;
+   margin: 8px;
+  background-color:  #e8f1f2;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-
 #home{
- position: fixed;
- top: 0;
- left: 0;
- right: 0;
- z-index: 10;
- box-sizing: border-box;
- color:#20a39e;
- height: 10%;
- background-color:#faf0ca; 
- padding: 20px;
- margin: 0;
- text-align: center;
-
-} 
-  
-nav {
   position: fixed;
-  top: 10%;
+  top: 0;
   left: 0;
   right: 0;
-  z-index: 9;
-    height: 10%;
-    box-sizing: border-box;
-    border-top: 10px solid;
-    border-color:#20a39e;
-    background-color:#faf0ca;
-    display: flex;
-    justify-content: space-around;
-  }
-  
+  z-index: 10;
+  box-sizing: border-box;
+  color:#20a39e;
+  height: 10%;
+  background-color:#faf0ca; 
+  padding: 20px;
+  margin: 0;
+  text-align: center;
  
-  nav li {
-    display: inline-block;
-     list-style: none;
-  }
+ }
+   
+ nav {
+   position: fixed;
+   top: 10%;
+   left: 0;
+   right: 0;
+   z-index: 9;
+     height: 10%;
+     box-sizing: border-box;
+     border-top: 10px solid;
+     border-color:#20a39e;
+     background-color:#faf0ca;
+     display: flex;
+     justify-content: space-around;
+   }
+   
   
-  nav a {
-    color: #20a39e;
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-  }
-  
-  nav a:hover{ 
-    background-color:lavender
-  }
+   nav li {
+     display: inline-block;
+      list-style: none;
+   }
+   
+   nav a {
+     color: #20a39e;
+     display: block;
+     padding: 10px;
+     text-decoration: none;
+   }
+   
+   nav a:hover{ 
+     background-color:lavender
+   }
   .scroll{
     position:absolute;
     top:20%;
@@ -90,7 +89,7 @@ nav {
  
 footer {
   width:100%;
-  height: 10%;
+
   background-color: rgb(2, 2, 2);
   color:rgb(219, 206, 206);
   margin:0px;
