--- a/about us.css
+++ b/about us.css
@@ -33,6 +33,7 @@ body {
      right: 0;
      z-index: 9;
        height: 10%;
+       padding-top:  10px;;
        box-sizing: border-box;
        border-top: 10px solid;
        border-color:#20a39e;
@@ -50,7 +51,7 @@ body {
      nav a {
        color: #20a39e;
        display: block;
-       padding: 10px;
+       padding: 5px 10px 5px 10px;
        text-decoration: none;
      }
      
