--- a/contact us.css
+++ b/contact us.css
@@ -3,7 +3,7 @@ body{
   background-position: center;
   background-size: cover;
   font-family: Georgia, 'Times New Roman', Times, serif;
-  margin: 8px;
+  margin: 0;
   padding: 0;
 }
 h2{
@@ -52,7 +52,7 @@ h2{
    nav a {
      color: #20a39e;
      display: block;
-     padding: 10px;
+     padding: 5px 10px 5px 10px;
      text-decoration: none;
    }
    
