--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
   height: 100%;
   padding:0;
-   margin: 8px;
+   margin: 0;
   background-color:  #e8f1f2;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
@@ -41,13 +41,16 @@ body{
    nav li {
      display: inline-block;
       list-style: none;
+      margin: 0;
+      
    }
    
    nav a {
      color: #20a39e;
      display: block;
-     padding: 10px;
+     padding: 5px 10px 5px 10px;
      text-decoration: none;
+     margin: 0;
    }
    
    nav a:hover{ 
