--- a/login.css
+++ b/login.css
@@ -1,165 +1,321 @@
-
-
-
-*:focus {
-  outline: none;
+.login-container {
+  width: 100%;
+  display: flex;
+  overflow: auto;
+  min-height: 100vh;
+  align-items: center;
+  flex-direction: column;
+  background-color: #1B2223;
 }
-
-body {
-  margin: 0;
-  padding: 0;
-  background-color:rgb(211, 241, 239);
-  background-size: cover;
-  font-size: 16px;
-  color: #222;
-  font-family:sans-serif;
-  font-weight: 300;
-}
-
-#login-box {
+.login-navbar-interactive {
+  width: 100%;
+  height: 100px;
+  display: flex;
   position: relative;
-  margin: 5% auto;
-  width: 600px;
-  height: 400px;
-  background: #FFF;
-  border-radius: 2px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  margin-top: 2.5%;
+  align-items: center;
+  padding-top: 0px;
+  padding-left: 60px;
+  padding-right: var(--dl-space-space-threeunits);
+  padding-bottom: 0px;
+  justify-content: space-between;
 }
-
-.left {
-  position: absolute;
-  top: 0;
-  left: 0;
-  box-sizing: border-box;
-  padding: 40px;
-  width: 300px;
-  height: 400px;
+.login-navlink {
+  display: contents;
 }
-
-h1 {
-  margin: 0 0 20px 0;
-  font-weight: 300;
-  font-size: 28px;
+.login-image {
+  flex: 0;
+  width: 200px;
+  object-fit: cover;
+  text-decoration: none;
 }
-
-input[type="text"],
-input[type="password"] {
-  display: block;
-  box-sizing: border-box;
-  margin-bottom: 20px;
-  padding: 4px;
-  width: 220px;
-  height: 32px;
-  border: none;
-  border-bottom: 1px solid #AAA;
-  font-family: sans-serif;
-  font-weight: 400;
-  font-size: 15px;
-  transition: 0.2s ease;
+.login-desktop-menu {
+  display: flex;
 }
-
-input[type="text"]:focus,
-input[type="password"]:focus {
-  border-bottom: 2px solid #16a085;
-  color: #16a085;
-  transition: 0.2s ease;
+.login-nav {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
 }
-
-input[type="submit"] {
-  margin-top: 28px;
-  width: 120px;
-  height: 32px;
-  background: #16a085;
-  border: none;
-  border-radius: 2px;
-  color: #FFF;
-  font-family: sans-serif;
-  font-weight: 500;
-  text-transform: uppercase;
-  transition: 0.1s ease;
-  cursor: pointer;
+.login-navlink1 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-right: 0px;
+  text-decoration: none;
 }
-
-input[type="submit"]:hover,
-input[type="submit"]:focus {
-  opacity: 0.8;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  transition: 0.1s ease;
+.login-text {
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: var(--dl-space-space-fiveunits);
+  margin-right: 0px;
+  text-transform: capitalize;
 }
-
-input[type="submit"]:active {
-  opacity: 1;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-  transition: 0.1s ease;
+.login-text01 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: var(--dl-space-space-fiveunits);
+  margin-right: 0px;
 }
-
-.or {
-  position: absolute;
-  top: 180px;
-  left: 280px;
-  width: 40px;
-  height: 40px;
-  background: #DDD;
-  border-radius: 50%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  line-height: 40px;
-  text-align: center;
+.login-text02 {
+  font-size: 16px;
+  font-weight: bold;
+  margin-left: var(--dl-space-space-fiveunits);
+  margin-right: 0px;
 }
-
-.right {
- background-image:url('img/MySchool1.jpg');
- background-size: cover;
- background-position:center;
-  position: absolute;
-  top: 0;
-  right: 0;
-  box-sizing: border-box;
-  padding: 40px;
-  width: 300px;
-  height: 400px;
-  border-radius: 0 2px 2px 0;
+.login-btn-group {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
-.right .loginwith {
-  display: block;
-  margin-bottom: 40px;
-  font-size: 28px;
-  color: #FFF;
-  text-align: center;
+.login-burger-menu {
+  display: none;
+  align-items: center;
+  justify-content: center;
 }
-
-button.social-signin {
-  margin-bottom: 20px;
-  width: 220px;
-  height: 36px;
-  border: none;
-  border-radius: 2px;
-  color: #FFF;
-  font-family:  sans-serif;
-  font-weight: 500;
-  transition: 0.2s ease;
-  cursor: pointer;
+.login-icon {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
 }
-
-button.social-signin:hover,
-button.social-signin:focus {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  transition: 0.2s ease;
+.login-mobile-menu {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  padding: 32px;
+  z-index: 100;
+  position: fixed;
+  transform: translateX(100%);
+  transition: 0.5s;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: #fff;
 }
-
-button.social-signin:active {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
-  transition: 0.2s ease;
+.login-nav1 {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
 }
-
-button.social-signin.facebook {
-  background: #32508E;
+.login-container1 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--dl-space-space-threeunits);
+  justify-content: space-between;
 }
-
-button.social-signin.twitter {
-  background: #55ACEE;
+.login-image1 {
+  height: 2rem;
 }
-
-button.social-signin.google {
-  background: #DD4B39;
+.login-menu-close {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-icon02 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+}
+.login-nav2 {
+  flex: 0 0 auto;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
+.login-text03 {
+  margin-bottom: var(--dl-space-space-unit);
+}
+.login-text04 {
+  margin-bottom: var(--dl-space-space-unit);
+}
+.login-text05 {
+  margin-bottom: var(--dl-space-space-unit);
+}
+.login-text06 {
+  margin-bottom: var(--dl-space-space-unit);
+}
+.login-text07 {
+  margin-bottom: var(--dl-space-space-unit);
+}
+.login-container2 {
+  flex: 0 0 auto;
+  width: auto;
+  display: flex;
+  margin-top: var(--dl-space-space-unit);
+  align-items: center;
+  flex-direction: row;
+}
+.login-login {
+  margin-right: var(--dl-space-space-twounits);
+}
+.login-icon-group {
+  display: flex;
+}
+.login-icon04 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+  margin-right: var(--dl-space-space-twounits);
+}
+.login-icon06 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+  margin-right: var(--dl-space-space-twounits);
+}
+.login-icon08 {
+  width: var(--dl-size-size-xsmall);
+  height: var(--dl-size-size-xsmall);
+}
+.login-form {
+  width: 40%;
+  height: auto;
+  display: flex;
+  align-self: center;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.login-text08 {
+  align-self: center;
+  margin-top: var(--dl-space-space-fourunits);
+}
+.login-text09 {
+  color: var(--dl-color-gray-white);
+}
+.login-text11 {
+  color: var(--dl-color-gray-white);
+}
+.login-textinput {
+  width: 60%;
+  height: 10%;
+  align-self: center;
+  background: none;
+}
+.login-textinput1 {
+  width: 60%;
+  height: 10%;
+  align-self: center;
+  background: none;
+}
+.login-link {
+  margin-top: 2.5%;
+  margin-left: 35%;
+  margin-right: 0%;
+}
+.login-button {
+  align-self: center;
+  background: none;
+  margin-top: 5%;
+}
+.login-form1 {
+  width: 40%;
+  height: auto;
+  display: flex;
+  margin-top: var(--dl-space-space-twounits);
+  align-items: center;
+  justify-content: center;
+}
+.login-text12 {
+  color: aliceblue;
+}
+.login-navlink2 {
+  margin-left: 1.5%;
+  text-decoration: none;
+}
+@media(max-width: 1600px) {
+  .login-form {
+    width: 50%;
+    height: auto;
+  }
+}
+@media(max-width: 1200px) {
+  .login-form {
+    width: 50%;
+    height: auto;
+  }
+}
+@media(max-width: 991px) {
+  .login-form {
+    width: 60%;
+    height: auto;
+  }
+}
+@media(max-width: 767px) {
+  .login-navbar-interactive {
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .login-navlink1 {
+    margin-left: var(--dl-space-space-twounits);
+  }
+  .login-text {
+    margin-left: var(--dl-space-space-fiveunits);
+  }
+  .login-text01 {
+    margin-left: var(--dl-space-space-fiveunits);
+  }
+  .login-text02 {
+    margin-left: var(--dl-space-space-fiveunits);
+  }
+  .login-nav1 {
+    background-color: #D9D9D9;
+  }
+  .login-form {
+    width: 100%;
+    height: auto;
+  }
+  .login-form1 {
+    margin-bottom: var(--dl-space-space-twounits);
+  }
+}
+@media(max-width: 479px) {
+  .login-navbar-interactive {
+    height: 104px;
+    padding: var(--dl-space-space-unit);
+  }
+  .login-desktop-menu {
+    display: none;
+  }
+  .login-navlink1 {
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+  }
+  .login-btn-group {
+    display: none;
+  }
+  .login-burger-menu {
+    display: flex;
+  }
+  .login-icon {
+    fill: #D9D9D9;
+  }
+  .login-mobile-menu {
+    padding: 16px;
+    background-color: #1b2223;
+  }
+  .login-nav1 {
+    height: 650px;
+    background-color: #1B2223;
+  }
+  .login-image1 {
+    width: 191px;
+    height: 87px;
+  }
+  .login-form {
+    width: 100%;
+    height: auto;
+  }
+  .login-textinput {
+    width: 70%;
+  }
+  .login-textinput1 {
+    width: 70%;
+  }
+  .login-link {
+    margin-left: 0%;
+  }
+  .login-form1 {
+    width: 100%;
+  }
 }
